Improved launcher